Sell extra cards